apps/overlays/prod/backend-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route-api
  namespace: store-backend
spec:
  parentRefs:
    - name: external-gateway
      namespace: nginx-gateway
  hostnames:
    - "shop.jenkinsdevops.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 80
